# office-chat

./: Cargo.toml  README.md
Formula/: office-chat.rb
src/: ai.rs  crypto.rs  history.rs  lore.rs  main.rs  net.rs  protocol.rs  state.rs  ui.rs
