[package]
name = "office-chat"
version = "0.1.0"
edition = "2021"
description = "Encrypted LAN chat over UDP broadcast"

[dependencies]
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
